LOG:

20100819 - 0.5.18 implemented test cases XA/5.47/0.*
                  fixed bug # 3045668

20100728 - 0.5.17 implemented test cases XA/5.32/*.*
                  implemented test cases XA/5.37/*.*
                  implemented test cases XA/5.40/*.*
                  implemented test cases XA/5.42/*.*
                  implemented test cases XA/5.44/*.*
                  fixed bugs # 3034270, # 3035528

20100703 - 0.5.16 implemented test cases XA/5.26/0.*
                  fixed bugs # 3021563, # 3021831, # 3021839, # 3024015
                  implemented test cases XA/5.30/0.*
                  implemented test cases XA/5.30/1.*

20100623 - 0.5.15 implemented test cases TX/5.19/0.*
                  fixed bug # 3019248
                  Alpha test first milestone reached: LIXA implementation is
                  compliant with the "Distributed Transaction Processing: 
                  The TX (Transaction Demarcation) Specification"
                  (X/Open CAE Specification)

20100621 - 0.5.14 implemented test cases TX/B.5/9.*
                  fixed bugs # 3018480, # 3018764

20100618 - 0.5.13 implemented test cases TX/B.5/8.*
                  fixed bug # 3013661

20100608 - 0.5.12 implemented test cases TX/B.5/0.*
                  implemented test cases TX/B.5/1.*
                  implemented test cases TX/B.5/2.*
                  implemented test cases TX/B.5/3.*
                  implemented test cases TX/B.5/4.*
                  implemented test cases TX/B.5/5.*
                  implemented test cases TX/B.5/6.*
                  implemented test cases TX/B.5/7.*
                  fixed bugs # 3012496, # 3013093, # 3013110

20100603 - 0.5.11 implemented test cases TX/B.4/0.*
                  implemented test cases TX/B.4/1.*
                  implemented test cases TX/B.4/2.*
                  implemented test cases TX/B.4/3.*
                  implemented test cases TX/B.4/4.*